# python-base

./: .pre-commit-config.yaml  README.md  poetry.toml  pyproject.toml  setup.cfg
.github/workflows/: python-app.yml  python.yaml  python.yml
docs/: conf.py  index.rst  modules.rst
