[tool.poetry]
name = "python_base"
version = "0.1.0"
description = "A base python setup."
authors = ["Name <email>"]

[tool.poetry.dependencies]
python = "^3.11.1"

[tool.poetry.group.dev.dependencies]
# Environment:
pre-commit = "^3.0.4"
# TODO: Auto-add git hook if using a Makefile.
# pre-commit install and maybe pre-commit autoupdate

# Formatting:
black = "^23.1.00"

# Linting:
djlint = "^1.19.14"
darglint = "^1.8.1"
flake8 = "^6.0.0"
flake8-docstrings = "^1.7.0"
flake8-isort = "^6.0.0"

[tool.poetry.group.docs.dependencies]
Sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
